page overflow fixed

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -134,8 +134,8 @@ img {
   }
   &.circle {
     border-radius: 50%;
-    // max-width: 25%;
-    max-width: 650px;
+    //  max-width: 50%; after 50 it hides the footer part
+    max-width: 70vh;
     margin: auto;
     
     @media (max-width: 900px) {
